Login route created and tested
